# FFusion

./: .cursorrules  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  index.css
src-tauri/: 2  Cargo.toml  build.rs  capabilities.json  ffstudio.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AudioTab.jsx  BatchTab.jsx  FramesTab.jsx  GifWebpTab.jsx  MergeTab.jsx  Settings.jsx  Sidebar.jsx  TrimTab.jsx  VideoTab.jsx  shared.jsx
